# web_backend

./: .gitignore  README.md
FastAPI/: .env  pyproject.toml
FastAPI/app/: main.py
FastAPI/app/api/: router.py
FastAPI/app/configs/: config.py
FastAPI/app/core/: config.py
FastAPI/app/routers/: __init__.py  router.py
FastAPI/app/schemas/: item_schemas.py  schema.py
FastAPI/app/services/: service.py
FastAPI/src/app/: main.py
FastAPI/src/app/configs/: config.py
FastAPI/src/app/routers/: router.py
FastAPI/src/app/schemas/: item_schema.py
FastAPI/test/: test.py
Gin/: go.mod
Gin/app/: main.go
Gin/app/api/v1/: handler.go
Gin/app/config/: config.go
Gin/app/routes/: route.go
Gin/src/: main.go
Gin/src/routers/: router.go
Gin/src/routes/: routes.go
